# targetscout

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  mlflow.db  pyproject.toml  requirements-tdc.txt  requirements.txt
.github/workflows/: eval.yml
config/: config.yaml
scripts/: gen_golden.py  ingest_corpus.py
src/targetscout/: __init__.py  config.py  llm.py
src/targetscout/agents/: __init__.py  graph.py  nodes.py  run.py
src/targetscout/api/: main.py
src/targetscout/app/: streamlit_app.py
src/targetscout/embeddings/: __init__.py  molecule.py  protein.py
src/targetscout/eval/: __init__.py  harness.py
src/targetscout/eval/golden/: qa_seed.jsonl
src/targetscout/models/: __init__.py  admet_train.py
src/targetscout/rag/: __init__.py  ingest.py  retriever.py
tests/: test_smoke.py
