[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "targetscout"
version = "0.1.0"
description = "AI hit-triage copilot for early-stage drug discovery"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

# Install in editable mode so `python -m targetscout.*` works:  pip install -e .

[tool.ruff]
line-length = 100
target-version = "py311"
